# artwork-menda

./: .gitignore  AUTHORS  README  README.md  configure.ac  convert.sh  menda-theme-upgrade
Menda-Dark/gtk-2.0/: gtkrc  panel.rc
Menda-Dark/gtk-3.0/: gtk-main-dark.css  gtk-widgets-darker-overrides.css  gtk-widgets.css  mate-applications.css
Menda/chrome/: userChrome.css
common/: Makefile.am  index.theme  index.theme-dark  index.theme-darker
gnome-shell/: gnome-classic.css  gnome-shell.css
gtk-2.0/: gtkrc  panel.rc
gtk-3.0/: gnome-applications.css  gtk-main-common.css  gtk-main-dark.css  gtk-main-darker.css  gtk-main.css  gtk-widgets.css
m4/: menda-enable.m4  menda-gnome.m4
metacity-1/: metacity-theme-2.xml  metacity-theme-3.xml
xfwm4/: bottom-active.xpm  bottom-inactive.xpm  bottom-left-active.xpm  bottom-left-inactive.xpm  bottom-right-active.xpm  bottom-right-inactive.xpm  close-active.xpm  close-inactive.xpm  close-prelight.xpm  close-pressed.xpm  hide-active.xpm  hide-inactive.xpm  hide-prelight.xpm  hide-pressed.xpm  left-active.xpm  left-inactive.xpm  maximize-active.xpm  maximize-inactive.xpm  maximize-prelight.xpm  maximize-pressed.xpm  menu-active.xpm  menu-inactive.xpm  menu-prelight.xpm  menu-pressed.xpm  right-active.xpm  right-inactive.xpm  title-1-active-shaded.xpm  title-1-active.xpm  title-1-inactive.xpm  title-2-active.xpm  title-2-inactive.xpm  title-3-active.xpm  title-3-inactive.xpm  title-4-active.xpm  title-4-inactive.xpm  title-5-active.xpm  title-5-inactive.xpm  top-left-active-shaded.xpm  top-left-active.xpm  top-left-inactive.xpm  (+3 more)
(+48 files in other folders)
